--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Logadapp\\Router\\": "src/"
+            "LogadApp\\Router\\": "src/"
         }
     }
 }
